[package]
authors = ["Dale Bustad <dale@divmain.com>"]
edition = "2018"
name = "lwc-swc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "1"
napi-derive = "1"
swc = "0.58.0"
swc_atoms = "0.2.7"
swc_common = { version = "0.12", features = ["tty-emitter", "sourcemap"] }
swc_ecma_ast = "0.52.0"
swc_ecma_codegen = "0.70.5"
swc_ecma_minifier = "0.28.0"
swc_ecma_parser = "0.70.3"
swc_ecmascript = { version = "0.64", features = ["codegen", "minifier", "optimization", "parser", "react", "transforms", "typescript", "utils", "visit"] }
swc_node_base = "0.3.0"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
