[package]
authors = ["Dale Bustad <dale@divmain.com>"]
edition = "2018"
name = "lwc-swc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.44"
napi = "1"
napi-derive = "1"
swc = { path = "swc" }
swc_atoms = { path = "swc/atoms" }
swc_common = { path = "swc/common", features = ["tty-emitter", "sourcemap"] }
swc_ecma_ast = { path = "swc/ecmascript/ast" }
swc_ecma_codegen = { path = "swc/ecmascript/codegen" }
swc_ecma_minifier = { path = "swc/ecmascript/minifier" }
swc_ecma_parser = { path = "swc/ecmascript/parser" }
swc_ecmascript = { path = "swc/ecmascript", features = ["codegen", "minifier", "optimization", "parser", "transforms", "typescript", "utils", "visit", "preset_env"] }
swc_ecma_preset_env = { path = "swc/ecmascript/preset-env" }
swc_node_base = { path = "swc/node/base" }

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
